force-app/main/default/objects/MY_Manual_Delivery_Status__c/MY_Manual_Delivery_Status__c.object-meta.xml
<CustomObject>
    <label>MY Manual Delivery Status</label>
    <nameField>
        <label>MY Manual Delivery Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MY Manual Delivery Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>