force-app/main/default/objects/MY_Manual_Delivery_Status__c/fields/object_extraction_status__c.field-meta.xml
<CustomField>
    <fullName>object_extraction_status__c</fullName>
    <label>object_extraction_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>