force-app/main/default/objects/MY_Manual_Delivery_Status__c/fields/order_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>order_delivery_date__c</fullName>
    <label>Order Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>