force-app/main/default/objects/MY_Manual_Delivery_Status__c/fields/order_number__c.field-meta.xml
<CustomField>
    <fullName>order_number__c</fullName>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>