force-app/main/default/objects/MY_Manual_Delivery_Status__c/fields/order_status__c.field-meta.xml
<CustomField>
    <fullName>order_status__c</fullName>
    <label>Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>