force-app/main/default/objects/MY_Manual_Delivery_Status__c/fields/source_created_date__c.field-meta.xml
<CustomField>
    <fullName>source_created_date__c</fullName>
    <label>Source Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>